Fixed folder name in sidebar overflowing

--- a/src/features/file-system/assets/_Sidebar.scss
+++ b/src/features/file-system/assets/_Sidebar.scss
@@ -5,7 +5,9 @@
 	background: var(--bg-base);
 	border-right: 1px solid var(--border);
 	padding: 1rem 0.5rem;
-	min-width: 350px;
+	width: 350px;
+	flex-shrink: 0;
+
 	user-select: none;
 	z-index: 10;
 
